# ros-gazebo-gym

./: .alexignore  .alexrc  .buildinfo  .gitignore  .versionrc  .zenodo.json  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  README.md  contributing.md  genindex.html  index-msg.html  index.html  objects.inv  package-lock.json  package.json  package.xml  pnpm-lock.yaml  py-modindex.html  release-please-config.json  requirements.txt  rosdoc.yaml  search.html  searchindex.js  setup.cfg  setup.py
.ci/: Dockerfile.noetic
.doctrees/: index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/dev/: add_nev_env.doctree  doc_dev.doctree  license.doctree  openai_ros_diff.doctree
.doctrees/etc/: acknowledgements.doctree
.github/: dependabot.yml  renovate.json
.github/workflows/: test.yml  (+8 more)
.standard-version/: package.xml.updater.js  version.py.updater.js
_modules/: index.html  ros_gazebo_gym.html
autoapi/: index.html
dev/: add_nev_env.html  contributing.html  doc_dev.html  license.html  openai_ros_diff.html
docs/: Makefile  make.bat
etc/: acknowledgements.html
get_started/: envs.html  install.html  usage.html
msg/: RLExperimentInfo.html  RLExperimentInfo.msg
openai_gazebo_pkg/: CMakeLists.txt  package.xml  setup.py
openai_ros/: .flake8  .gitignore  CMakeLists.txt  package.xml  requirements.txt  setup.py
openai_ros/doc/: cartpole_environment.rst  conf.py  cube_single_disk_environment.rst  hopper_environment.rst  husarion_environment.rst  index.rst  manifest.yaml  modules.rst  openai_ros.cartpole_stay_up.rst  openai_ros.common.markers.rst  openai_ros.robot_envs.rst  openai_ros.rst  openai_ros.task_envs.panda.markers.rst  openai_ros.task_envs.panda.rst  openai_ros_common.rst  openai_ros_core.rst  panda_environment.rst  robot_environments.rst  turtlebot3_environment.rst
openai_ros/doc/_static/css/: custom.css
openai_ros/msg/: RLExperimentInfo.msg
openai_ros/sandbox/: test_marker.py  test_sample_region.py  test_text_overlay.py
openai_ros/src/openai_ros/: __init__.py  cartpole_env.py  controllers_connection.py  cube_single_disk_env.py  exceptions.py  gazebo_connection.py  hopper_env.py  openai_ros_common.py  parrotdrone_env.py  robot_gazebo_env.py  robot_gazebo_goal_env.py  sumitxl_env.py  turtlebot2_env.py  turtlebot3_env.py
openai_ros/src/openai_ros/cartpole_stay_up/: stay_up.py
openai_ros/src/openai_ros/cfg/: rosdep.yaml
openai_ros/src/openai_ros/common/: __init__.py  core.py  euler_angles.py  functions.py  helpers.py  ros_launcher.py  singleton.py
openai_ros/src/openai_ros/common/markers/: __init__.py  sample_region_marker.py  target_marker.py
openai_ros/src/openai_ros/core/: __init__.py  controllers_connection.py  core.py  gazebo_connection.py  helpers.py  ros_launcher.py  start_openai_ros_env.py
openai_ros/src/openai_ros/hopper/: hopper_stay_up.py
openai_ros/src/openai_ros/moving_cube/: one_disk_walk.py
openai_ros/src/openai_ros/parrotdrone/: parrotdrone_goto.py
openai_ros/src/openai_ros/robot_envs/: __init__.py  cartpole_env.py  cube_rl_utils.py  cube_single_disk_env.py  fetch_env.py  fetchsimple_env.py  hopper_env.py  husarion_env.py  iriwam_env.py  panda_env.py  parrotdrone_env.py  sawyer_env.py  shadow_tc_env.py  sumitxl_env.py  turtlebot2_env.py  turtlebot3_env.py  wamv_env.py
openai_ros/src/openai_ros/sumit_xl/: sumit_xl_room.py
openai_ros/src/openai_ros/task_envs/: __init__.py  task_commons.py  task_envs_list.py
openai_ros/src/openai_ros/task_envs/cartpole_stay_up/: __init__.py  stay_up.py
openai_ros/src/openai_ros/task_envs/cartpole_stay_up/config/: stay_up.yaml
openai_ros/src/openai_ros/task_envs/fetch/: fetch_pick_and_place_task.py  fetch_push.py  fetch_simple_task.py  fetch_test_task.py
openai_ros/src/openai_ros/task_envs/fetch/config/: fetch_test.yaml  fetchsimple_test.yaml
openai_ros/src/openai_ros/task_envs/hopper/: hopper_stay_up.py
openai_ros/src/openai_ros/task_envs/husarion/: husarion_get_to_position_turtlebot_playground.py
openai_ros/src/openai_ros/task_envs/iriwam/: tcp_to_bowl.py
openai_ros/src/openai_ros/task_envs/iriwam/config/: tcp_to_bowl.yaml
openai_ros/src/openai_ros/task_envs/moving_cube/: one_disk_walk.py
openai_ros/src/openai_ros/task_envs/moving_cube/config/: one_disk_walk.yaml
openai_ros/src/openai_ros/task_envs/panda/: __init__.py  panda_pick_and_place.py  panda_push.py  panda_reach.py  panda_slide.py
openai_ros/src/openai_ros/task_envs/panda/config/: panda_pick_and_place.yaml  panda_push.rviz  panda_push.yaml  panda_reach.rviz  panda_reach.yaml  panda_slide.yaml
openai_ros/src/openai_ros/task_envs/panda/markers/: __init__.py  cube_marker.py  frame_origin_marker.py  puck_marker.py
openai_ros/src/openai_ros/task_envs/parrotdrone/: parrotdrone_goto.py
openai_ros/src/openai_ros/task_envs/parrotdrone/config/: parrotdrone_goto.yaml
openai_ros/src/openai_ros/task_envs/sawyer/: learn_to_pick_cube.py  learn_to_touch_cube.py
openai_ros/src/openai_ros/task_envs/sawyer/config/: learn_to_touch_cube.yaml
openai_ros/src/openai_ros/task_envs/shadow_tc/: learn_to_pick_ball.py
openai_ros/src/openai_ros/task_envs/sumit_xl/: sumit_xl_room.py
openai_ros/src/openai_ros/task_envs/sumit_xl/config/: sumit_xl_room.yaml
openai_ros/src/openai_ros/task_envs/turtlebot2/: turtlebot2_maze.py  turtlebot2_wall.py
openai_ros/src/openai_ros/task_envs/turtlebot2/config/: turtlebot2_maze.yaml  turtlebot2_wall.yaml
openai_ros/src/openai_ros/task_envs/turtlebot3/: __init__.py  turtlebot3_world.py
openai_ros/src/openai_ros/task_envs/turtlebot3/config/: turtlebot3_world.yaml
openai_ros/src/openai_ros/task_envs/wamv/: wamv_nav_twosets_buoys.py
openai_ros/src/openai_ros/turtlebot2/: turtlebot2_maze.py
openai_ros/src/openai_ros/turtlebot3/: turtlebot3_world.py
openai_ros/templates/: template_my_robot_env.py  template_my_task_env.py  template_my_training_env.py
requirements/: dev_requirements.txt  doc_requirements.txt  requirements.txt
rosdep/: 19-ros-gazebo-gym.list  README.md  rosdep.yaml
sandbox/: README.md
templates/: template_my_robot_env.py  template_my_task_env.py
(+211 files in other folders)
