<?xml version="1.0"?>
<package format="2">
  <name>ros_gazebo_gym</name>
  <version>2.0.1</version>
  <description>Framework for training reinforcement learning algorithms on a variety of ROS Gazebo environments.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="rick.staa@outlook.com">Rick Staa</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://rickstaa.dev/ros_gazebo_gym/</url>
  <url type="repository">https://github.com/rickstaa/ros_gazebo_gym</url>
  <url type="bugtracker">https://github.com/rickstaa/ros_gazebo_gym/issues</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="rick.staa@outlook.com">Rick Staa</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->

  <!-- Build tools that are needed -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>

  <!-- Packages that are required during building (find_packages()-ed in CMake).-->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>python3-catkin-pkg</build_depend>
  <build_depend>python3-catkin-tools</build_depend>

  <!-- Packages that are needed when building against this package (Included headers) -->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>

  <!-- Packages needed for running the code in this package ((CATKIN_)DEPENDS in
    catkin_package()-ed in CMake)
  -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>rospy_message_converter</exec_depend>
  <exec_depend>jsk_rviz_plugins</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <!-- Environment dependencies
    NOTE: Only needed for certain environments-->
  <!--FETCH env dependencies-->
  <!-- <exec_depend>moveit_commander</exec_depend> -->
  <!--Iriwam env dependencies-->
  <!-- <exec_depend>trajectory_msgs</exec_depend> -->
  <!-- <exec_depend>moveit_msgs</exec_depend> -->
  <!--Sawyer env dependencies-->
  <!-- <exec_depend>intera_interface</exec_depend> -->
  <!-- <exec_depend>intera_core_msgs</exec_depend> -->
  <!--Shadow env dependencies-->
  <!-- <exec_depend>smart_grasping_sandbox</exec_depend> -->
  <!-- <exec_depend>moveit_msgs</exec_depend> -->
  <!---Wamv env dependencies-->
  <!-- <exec_depend>robotx_gazebo</exec_depend> -->

  <!-- Python dependencies -->
  <exec_depend>python3-gymnasium-pip</exec_depend>
  <exec_depend>python3-gymnasium-robotics-pip</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pygit2</exec_depend>
  <exec_depend>python3-ruamel.yaml</exec_depend>
  <exec_depend>python3-tqdm</exec_depend>

  <!-- Documentation dependencies -->
  <doc_depend>rosdoc_lite</doc_depend>
  <doc_depend>python3-sphinx</doc_depend>
  <doc_depend>python3-sphinx-rtd-theme</doc_depend>
  <doc_depend>python3-myst-parser-pip</doc_depend>
  <doc_depend>python3-sphinx-autoapi-pip</doc_depend>

  <!-- The export tag contains other, unspecified, tags (Used for metapackages and
  Plugins -->
  <export>
    <!-- <metapackage /> -->

    <!-- Documentation -->
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
