[options.extras_require]
dev =
docs =
    docutils
    sphinx
    sphinx-autobuild
    sphinx-rtd-theme
    myst-parser

[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    .git,
    __pycache__,
    sandbox
per-file-ignores =
    src/ros_gazebo_gym/task_envs/task_envs_list.py: E501
    __init__.py: F401, E501
max-complexity = 10
