<?xml version="1.0"?>
<package format="2">
  <name>openai_ros</name>
  <version>1.0.0</version>
  <description>The openai_ros package</description>
  <maintainer email="rdaneel@todo.todo">rdaneel</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>theconstruct_msgs</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
