<?xml version="1.0"?>
<package format="2">
  <name>openai_ros</name>
  <version>1.0.0</version>
  <description>The openai_ros package</description>
  <maintainer email="rdaneel@todo.todo">rdaneel</maintainer>
  <maintainer email="rick.staa@outlook.com">rickstaa</maintainer>
  <license>lGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>python3-catkin-pkg</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- extra build dependencies -->
  <build_depend>python3-catkin-tools</build_depend>

  <!-- run dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Environment dependencies
    NOTE: Only needed for certain environments-->
  <!--FETCH env dependencies-->
  <!-- <exec_depend>moveit_commander</exec_depend> -->
  <!--Iriwam env dependencies-->
  <!-- <exec_depend>trajectory_msgs</exec_depend> -->
  <!-- <exec_depend>moveit_msgs</exec_depend> -->
  <!--Sawyer env dependencies-->
  <!-- <exec_depend>intera_interface</exec_depend> -->
  <!-- <exec_depend>intera_core_msgs</exec_depend> -->
  <!--Shadow env dependencies-->
  <!-- <exec_depend>smart_grasping_sandbox</exec_depend> -->
  <!-- <exec_depend>moveit_msgs</exec_depend> -->
  <!---Wamv env dependencies-->
  <!-- <exec_depend>robotx_gazebo</exec_depend> -->

  <!-- Python dependencies -->
  <exec_depend>gym-pip</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pygit2</exec_depend>
  <exec_depend>python3-ruamel.yaml</exec_depend>
  <exec_depend>python3-tqdm</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
